[gd_scene load_steps=3 format=3 uid="uid://dns57ojeofnhm"]

[ext_resource type="Script" path="res://enemies/green/green_laser.gd" id="1_c2nfe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_18ni5"]
radius = 1.0

[node name="test" type="RayCast2D"]
visible = false
target_position = Vector2(50, 0)
collision_mask = 0
script = ExtResource("1_c2nfe")

[node name="line" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 5000, 0)
width = 1.0
default_color = Color(0, 1, 0, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="attack" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 5000, 0)
default_color = Color(1, 3, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="hurtbox" type="Area2D" parent="."]

[node name="TimerDie" type="Timer" parent="."]
wait_time = 0.3

[node name="TimerAttack" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="check" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="check"]
shape = SubResource("CircleShape2D_18ni5")

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="hurtbox" to="." method="_on_hurtbox_area_exited"]
[connection signal="timeout" from="TimerDie" to="." method="_on_timer_die_timeout"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_timer_attack_timeout"]
[connection signal="area_entered" from="check" to="." method="_on_check_area_entered"]
[connection signal="area_exited" from="check" to="." method="_on_check_area_exited"]
